<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="8"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/repoName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:layout_weight="5"
        android:textAppearance="?attr/textAppearanceListItem" />

    <ImageView
        android:id="@+id/bookmarkIcon"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_weight="1"
        android:layout_gravity="center_vertical"
        android:contentDescription="@string/is_bookmarked_icon"
        android:src="@drawable/bookmark"
        />

    <TextView
        android:id="@+id/stargazerCount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:layout_weight="2"
        android:layout_gravity="center_vertical"
        android:textAppearance="?attr/textAppearanceListItem" />
</LinearLayout>