<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.SquareIncLibsActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/reposListRecyclerView"
        android:name="com.example.rossen.squareinclibs.LibraryListFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/recycler_view_horizontal_margin"
        android:layout_marginRight="@dimen/recycler_view_horizontal_margin"
        android:visibility="gone"
        tools:listitem="@layout/repo_element_content" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center" />

    <TextView
        android:id="@+id/errorTextView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center" />

</LinearLayout>