...
        android:layout_margin="@dimen/text_margin"
        android:text="@string/reponame"
        android:textSize="@dimen/repo_header_text_size"
        tools:context=".ui.StargazersListFragment" />

    <Button
        android:id="@+id/bookmarkButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="@dimen/button_horizontal_margin"
        android:layout_marginTop="@dimen/button_vertical_margin"
        android:layout_marginEnd="@dimen/button_horizontal_margin"
...
